# Catallaxyz

./: .gitignore  FRONTEND_AUDIT_REPORT.md  README.md  docker-compose.prod.yml  docker-compose.yml  need.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  package.json
contracts/catallaxyz/programs/catallaxyz/: Cargo.toml
contracts/catallaxyz/programs/catallaxyz/src/: constants.rs  errors.rs  events.rs  lib.rs  switchboard_lite.rs  utils.rs
contracts/catallaxyz/programs/catallaxyz/src/instructions/: calculator.rs  cancel_order.rs  create_market.rs  deposit_usdc.rs  distribute_liquidity_reward.rs  ed25519_verify.rs  fill_order.rs  global_pause.rs  increment_nonce.rs  init_creator_treasury.rs  init_market_tokens.rs  init_market_vault.rs  init_platform_treasury.rs  init_reward_treasury.rs  init_treasury.rs  initialize.rs  match_orders.rs  merge_position_single.rs  mod.rs  operator_management.rs  pause_market.rs  redeem_single_outcome.rs  request_randomness.rs  resume_market.rs  set_keeper.rs  settle_market.rs  settle_trade.rs  settle_with_randomness.rs  split_position_single.rs  terminate_if_inactive.rs  treasury_utils.rs  update_fee_rates.rs  update_market_params.rs  withdraw_platform_fees.rs  withdraw_reward_fees.rs  withdraw_usdc.rs
contracts/catallaxyz/programs/catallaxyz/src/states/: global.rs  market.rs  mod.rs  order_status.rs  order_types.rs  user_balance.rs  user_nonce.rs  user_position.rs
database/: MIGRATION_CLEANUP.md  migrations.sql  migrations_optimized.sql  schema.sql
deploy/: README.md
docs/: DEPLOYMENT_GUIDE.md  PROJECT_OVERVIEW.md  README.md  audit-report.md
supabase/: README.md
(+399 files in other folders)
