[package]
name = "catallaxyz"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "catallaxyz"

[features]
default = ["no-log-ix-name"]  # 默认启用，减少日志开销
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }

constant_time_eq = "=0.3.1"
blake3 = "=1.8.2"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
